2008-12-25  Frederic Peters  <fpeters@0d.be>

	* src/core/main.c: (main): added call to g_thread_init(), as ORBit2
	stopped doing it and Metacity is using gconf; closes #565517.

2008-12-24  Yanko Kaneti  <yaneti@declera.com>

	* src/metacity.schemas.in.in: add screenshot commands which had
          mistakenly been removed; closes #564343, Launchpad bug 298463,
          Red Hat bug 474635, and probably others.

2008-12-24  Thomas Thurman  <tthurman@gnome.org>

	* src/include/all-keybindings.h: fix move_to_corner_se

2008-12-21  Colin Walters  <walters@verbum.org>

	* src/core/window.c: windows which attempt to present themselves
          but are offscreen end up demanding attention, unless they
          are transient, when they move to the current workspace
          as before.  Closes #482354.

2008-12-19  Thomas Thurman  <tthurman@gnome.org>

	* src/ui/frames.c: when the user double-clicks the title bar,
	  end the grab op.  Closes #401028.

2008-12-16  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.89.

2008-12-16  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.55 release.

2008-12-15  Erwann Chenede  <erwann.chenede@sun.com>

	* configure.in: fix build on Solaris.  Closes #564123.

2008-12-02  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.55.

2008-12-02  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.34 release.

2008-12-02  Matt Kraai  <kraai@ftbfs.org>

	* src/core/iconcache.c: patches to fixes for -Wall.  Closes #562939.

2008-12-01  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.34.

2008-12-01  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.21 release.

2008-12-01  Thomas Thurman  <tthurman@gnome.org>

	* configure.in: gnome-doc-tools version doesn't need to be so high.
	* src/compositor/compositor-xrender.c: disable the entire file if the
          compositor is disabled.